# python_cli_template

./: README.md  pyproject.toml
src/example_lib/: cli.py
tests/test_example_lib/: test_answer.py
