[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# from https://peps.python.org/pep-0621/
[project]
name = "example-lib"
version = "0.1.0"
description = "Lovely Spam! Wonderful Spam!"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["egg", "bacon", "sausage", "tomatoes", "Lobster Thermidor"]
authors = [
    { name = "John Smith" },
    { email = "js@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

dependencies = [
  "requests"
]

[project.optional-dependencies]
test = [
    "pytest >= 6.0.0",
]

[project.urls]
homepage = "https://example.com"
documentation = "https://readthedocs.org"
repository = "https://github.com"
changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.scripts]
example-cli = "example_lib.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"